updata java version to 12